Fix layout bugs on errors page (#7632)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,10 +2,6 @@
 	text-align: center;
 }
 
-.Collapsible__contentInner {
-	margin: 1px;
-}
-
 .ant-picker-input input::placeholder {
 	color: var(--color-gray-500);
 	font-size: 14px;
